--- a/templates/attempts.html
+++ b/templates/attempts.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../static/styles/attempts.css">
 {%extends 'base.html'%}
 {% block body %}
     <div class="attemptsContainer">
@@ -5,22 +6,27 @@
             <p>{{ message }}</p>
         {% endif %}
         {% for data in fullData %}
-            <h2>Test: {{ data[2] }}</h2>
-            <p>Teacher: {{ teacherData.get(data[1], "Unknown Teacher") }}</p>
-            <p>Student: {{ studentData.get(data[20], "Unknown Student") }}</p>
+        <div class="attemptItem">
+            <div class="attemptTitle">
+                <h2>Test: {{ data[2] }}</h2>
+                <p>Teacher: {{ teacherData.get(data[1], "Unknown Teacher") }}</p>
+                <p>Student: {{ studentData.get(data[20], "Unknown Student") }}</p>
+            </div>
+            <button class="grade">Grade: <i class="fa-solid fa-file-pen fa-xl"></i></button>
 
-            <table border="1">
-                <tr>
+            <table border="1" class="attemptTable">
+                <tr class="tableHeader">
                     <th>Question</th>
                     <th>Student Answer</th>
                 </tr>
                 {% for i in range(data[3]) %}
-                <tr>
+                <tr class="tableData">
                     <td> {{ data[i + 4] }} </td>
                     <td> {{ data[i + 23] }} </td>
                 </tr>
                 {% endfor %}
             </table>
+        </div>
         {% endfor %}
     </div>
 {% endblock %}
