css adjustments to table border and grade buttons

--- a/templates/attempts.html
+++ b/templates/attempts.html
@@ -12,9 +12,9 @@
                 <p>Teacher: {{ teacherData.get(data[1], "Unknown Teacher") }}</p>
                 <p>Student: {{ studentData.get(data[20], "Unknown Student") }}</p>
             </div>
-            <button class="grade">Grade: <i class="fa-solid fa-file-pen fa-xl"></i></button>
+            <button class="grade">Grade: <i class="fa-solid fa-file-pen"></i></button>
 
-            <table border="1" class="attemptTable">
+            <table class="attemptTable">
                 <tr class="tableHeader">
                     <th>Question</th>
                     <th>Student Answer</th>
