--- a/static/styles/attempts.css
+++ b/static/styles/attempts.css
@@ -39,6 +39,8 @@ body{
     width: 100px;
     text-transform: uppercase;
     color: var(--color-3);
+    font-family: var(--font-main);
+    font-size: 18px;
 }
 
 .grade:hover{
@@ -52,6 +54,10 @@ body{
 .attemptTable{
     background-color: var(--color-3);
     width: 600px;
+}
+
+table, th, td{
+    border: 1px solid var(--color-1);
 }
 
 .tableHeader{
