--- a/static/styles/attempts.css
+++ b/static/styles/attempts.css
@@ -5,6 +5,11 @@ body{
     min-height: calc(100vh - 200px);
 }
 
+
+/* ----------------------------- */
+/* ---- TEST ATTEMPT STYLES ---- */
+/* ----------------------------- */
+
 .attemptsContainer{
     display: flex;
     flex-direction: column;
@@ -25,6 +30,8 @@ body{
     width: 600px;
 }
 
+/* -- grade button styles -- */
+
 .grade{
     display: flex;
     justify-content: space-evenly;
@@ -41,6 +48,7 @@ body{
     color: var(--color-3);
     font-family: var(--font-main);
     font-size: 18px;
+    cursor: pointer;
 }
 
 .grade:hover{
@@ -50,6 +58,29 @@ body{
 .fa-file-pen{
     color: var(--color-3);
 }
+
+/* -- grade form styles -- */
+
+.gradeForm{
+    display: none;
+}
+
+.gradeForm > label,
+.gradeForm > input{
+    font-family: var(--font-main);
+}
+
+.submit-btn{
+    border: none;
+    background-color: var(--color-1);
+    color: var(--color-3);
+    font-size: 16px;
+}
+.submit-btn:hover{
+    background-color: var(--color-2);
+}
+
+/* -- test table styles -- */
 
 .attemptTable{
     background-color: var(--color-3);
