--- a/templates/attempts.html
+++ b/templates/attempts.html
@@ -32,8 +32,10 @@
             </div>
             <button class="grade">Grade: <i class="fa-solid fa-file-pen"></i></button>
             <form action="{{ url_for('grade', test_id=data[0], tid=data[1], sid=data[20]) }}" method="POST" class="gradeForm">
-                <label for="{{data[1]}}-{{data[20]}}">Score:</label>
-                <input type="number" min="0" max="100" step="0.01" default="0" id="{{data[1]}}-{{data[20]}}" name="{{data[1]}}-{{data[20]}}">
+                <label for="{{data[1]}}-{{data[20]}}">Current grade:</label>
+                <input type="number" min="0" max="100" step="0.01" 
+                value="{{ gradeData.get((data[0], data[20]), '') }}" 
+                id="{{data[1]}}-{{data[20]}}" name="{{data[1]}}-{{data[20]}}">
                 <input type="submit" class="submit-btn">
             </form>
             <table class="attemptTable">
