--- a/static/styles/accounts.css
+++ b/static/styles/accounts.css
@@ -21,6 +21,7 @@ body{
     gap: 10px;
     align-items: center;
     margin: 0 auto;
+    margin-bottom: 450px;
     max-width: 1000px;
     background-color: var(--color-4);
     padding: 15px;
