--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                     <li class="navItem"><a href="/test">Tests</a></li>
                     <li class="navItem"><a href="/attempts">Test attempts</a></li>
                     <li class="navItem"><a href="/create">Create a test</a></li>
-                    <li class="navItem"><a href="#" onclick="openFlyout()"><i class="fa-regular fa-circle-user fa-lg"></i></a></li>
+                    <li class="navItem"><a href="/account_info"><i class="fa-regular fa-circle-user fa-lg"></i></a></li>
                 </ul>
             </div>
             <div class="flyout" id="flyoutMenu">
