--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                     <li class="navItem"><a href="/signup">Sign up</a></li>
                     <li class="navItem"><a href="/login">Login</a></li>
                     <li class="navItem"><a href="/accounts">View accounts</a></li>
+                    <li class="navItem"><a href="/view_grades">View grades</a></li>
                     <li class="navItem"><a href="/test">Tests</a></li>
                     <li class="navItem"><a href="/attempts">Test attempts</a></li>
                     <li class="navItem"><a href="/create">Create a test</a></li>
