--- a/templates/account_info.html
+++ b/templates/account_info.html
@@ -13,7 +13,7 @@
             <p class="input-field">Account ID: {{accInfo[0]}}</p>
             <p class="input-field">First name: {{accInfo[1]}}</p>
             <p class="input-field">Last name: {{accInfo[2]}}</p>
-            <a onclick="window.location.href='/logout'" class="input-submit">Logout</a>
+            <button onclick="window.location.href='/logout'" class="input-submit">Logout</button>
         </form>
     </div>
 {% endblock %}
