--- a/static/styles/test_info.css
+++ b/static/styles/test_info.css
@@ -1,5 +1,11 @@
 @import url(base.css);
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: var(--color-3);
     font-family: var(--font-main);
@@ -9,31 +15,81 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px auto;
-    min-height: calc(100vh - 250px);
-    max-width: 900px;
-}
-
-.testItem{
-    margin: 10px auto;
+    margin: 0 auto;
     background-color: var(--color-4);
-    padding: 20px;
-    height: 100px;
-    width: 250px;
-    color: var(--color-1);
+    padding-top: 20px;
+    min-height: calc(100vh - 200px);
+    max-width: 900px;
+    text-align: center;
 }
 
-.itemInfo{
-    list-style: none;
+.testContainer > h2{
+    color: var(--color-2);
 }
+
+.testWrapper{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    min-height: 100px;
+    width: 800px;
+}
+
+.testItem,
+.attemptInfoWrapper{
+    border-collapse: collapse;
+    border: 1px solid var(--color-2);
+    width: 90%;
+    color: var(--color-2);
+}
+
+.attemptInfoWrapper{
+    margin-bottom: 40px;
+}
+
+/* .testItem, 
+.attemptInfoWrapper{
+    border: 1px solid #ccc;
+} */
+
+th, td{
+    width: 33%;
+}
+
+.testItem th, 
+.testItem td,
+.attemptInfoWrapper th, 
+.attemptInfoWrapper td{
+    border: 1px solid var(--color-1);
+    background-color: var(--color-3);
+    padding: 10px;
+}
+
+/* .attemptInfoWrapper{
+    margin-top: 10px;
+    border-collapse: collapse;
+    width: 100%;
+} */
 
 .icon{
-    margin-left: 10px;
+    position: relative;
+    top: -70;
+    left: 380;
+    margin: 5px 0;
+    border: none;
+    background: none;
+    font-size: 28px;
+    color: var(--color-2);
+    cursor: pointer;
 }
 
 .fa-circle-info{
-    color: var(--color-1);
+    color: var(--color-2);
 }
 .fa-circle-info:hover{
     color: var(--color-5);
+}
+
+.hidden{
+    display: none;
 }
