--- a/templates/account_info.html
+++ b/templates/account_info.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="../static/styles/styles.css">
 {% extends 'base.html' %}
 {% block body %}
+    <h2 class="title">Account information</h2>
     <div class="page">
         <form class="login-form">
             {% if error %}
