--- a/templates/attempts.html
+++ b/templates/attempts.html
@@ -19,6 +19,7 @@
 </script>
 {%extends 'base.html'%}
 {% block body %}
+    <h2 class="title">Test Attempts</h2>
     <div class="attemptsContainer">
         {% if message %}
             <p>{{ message }}</p>
