--- a/templates/test_info.html
+++ b/templates/test_info.html
@@ -9,8 +9,8 @@
 </script>
 {%extends 'base.html'%}
 {% block body %}
+<h2 class="title">Test information</h2>
 <div class="testContainer">
-    <h2>Test information</h2>
     {% for i in range(testRows|length) %}
     <div class="testWrapper"> 
         <table class="testItem">
