--- a/static/styles/accounts.css
+++ b/static/styles/accounts.css
@@ -4,24 +4,13 @@ body{
     background-color: var(--color-3);
 }
 
-.title{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px auto;
-    color: var(--color-2);
-    font-family: var(--font-main);
-    font-size: 30px;
-    text-transform: uppercase;
-}
-
 .accountsContainer{
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 10px;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 450px;
+    min-height: calc(100vh - 250px);
     max-width: 1000px;
     background-color: var(--color-4);
     padding: 15px;
