--- a/static/styles/attempts.css
+++ b/static/styles/attempts.css
@@ -15,8 +15,9 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    max-width: 900px;
     background-color: var(--color-4);
+    min-height: calc(100vh - 276px);
+    max-width: 900px;
     padding: 15px;
     font-family: var(--font-main);
     color: var(--color-2);
