--- a/templates/test_info.html
+++ b/templates/test_info.html
@@ -22,13 +22,7 @@
             <tr>
                 <td>{{ testRows[i][1] }}</td>
                 <td>{{ teacher_dict.get(testRows[i][2], 'Unknown') }}</td>
-                {% set attempts = 0 %}
-                {% for c in count %}
-                    {% if c[0] == testRows[i][0] %}
-                        {% set attempts = c[1] %}
-                    {% endif %}
-                {% endfor %}
-                <td>{{ attempts }}</td>
+                <td>{{ count.get(testRows[i][0], '0') }}</td>
             </tr>
         </table>
 
